deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-service
  labels:
    app: nodejs
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: presentation-layer
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: local/frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentation-deployment
  labels:
    app: presentation-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presentation-layer
  template:
    metadata:
      labels:
        app: presentation-layer
    spec:
      containers:
        - name: presentation-layer
          image: local/presentation-layer
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    #    - host: demo.info
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: presentation-service
                port:
                  number: 5000
